Jumping works! Cleanup + fix bug with checking if you won after a move

--- a/board/board.directive.css
+++ b/board/board.directive.css
@@ -12,7 +12,7 @@ td {
   text-align: center;
 }
 
-.ball, .player {
+.ball, .player, .in-progress {
   display: inline-block;
   width: 12px;
   height: 12px;
@@ -32,6 +32,11 @@ td {
 .player {
   border-color: darkgray;
   background-color: darkgray;
+}
+
+.in-progress {
+  border-color: gold;
+  background-color: gold;
 }
 
 .endzone {
